# microservices-framework

./: Cargo.toml  README.md  bindings.h  makefile
src/: broker.rs  broker_delegate.rs  constants.rs  context.rs  lib.rs  logger.rs  packet.rs  service.rs  utils.rs
src/errors/: mod.rs  packet.rs  registry.rs  service_broker.rs  transit.rs
src/ffi/: broker_ffi.rs  context_ffi.rs  mod.rs  service_ffi.rs
src/registry/: action_catalog.rs  action_endpoint.rs  endpoint_list.rs  event_catalog.rs  event_endpoint.rs  mod.rs  node.rs  node_catalog.rs  registry.rs  service_catalog.rs  service_item.rs
src/registry/discoverers/: local.rs  mod.rs
src/serializers/: json.rs  mod.rs
src/strategies/: mod.rs  round_robin.rs
src/transporter/: mod.rs  nats.rs  transit.rs
