[package]
name = "molecular-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
env_logger  = "0.9.0"
log= "0.4.14"
serde_json = "1.0.0"
anyhow = "1.0.53"
tokio = { version = "1.16.1", features = ["full"] }
regex = "1.5.4"
lazy_static = "1.3.0"
derive_more = "0.99.17"
thiserror = "1.0"